Fixed matching on swedish characters and overflow on hashtags

--- a/src/webparts/fsposKwitter/components/FsposKwitter.module.scss
+++ b/src/webparts/fsposKwitter/components/FsposKwitter.module.scss
@@ -82,6 +82,11 @@ img {
     margin: 16px;
 }
 
+.overflowWrap {
+  overflow-wrap: break-word;
+  width: 350px;
+}
+
 .tweet-header {
   display: flex;
   align-items:flex-start;
